--- a/src/app/components/mainapp/newdeposits/newdeposits.component.css
+++ b/src/app/components/mainapp/newdeposits/newdeposits.component.css
@@ -28,4 +28,14 @@
     text-align: right;
   
   }
+  .deposit-inputbox{
+    width: 180px;
+    text-align: right;
+
+  }
+  .deposit-label{
+    width: 100px;
+    text-align: right;
+  
+  }
   
