--- a/src/app/components/mainapp/newdeposits/cashbox.html
+++ b/src/app/components/mainapp/newdeposits/cashbox.html
@@ -85,13 +85,13 @@
         <div class="row">
         <mat-form-field class="example-full-width">
                 <div  class="col-sm-3 col-md-4">
-                        <input class="aaa"  matInput  pattern="/^(\d*\.)?\d+$/igm"  (change)=updateTotal() name="na2"  [(ngModel)]="na2" #ctrl="ngModel" >     
+                        <label class="cash-label" > </label>
                 </div>
                 <div class="col-sm-3 col-md-4">
                         <label class="cash-label" >  Total </label>
                 </div>    
                 <div class="col-sm-3 col-md-4"  >
-                        <label class="cash-label" > {{ cashtotal  | number : '1.2-2' }} </label> 
+                        <input class="cash-label"  matInput  pattern="/^(\d*\.)?\d+$/igm"  name="cashtotal"  [(ngModel)]="cashtotal" #ctrl="ngModel" > 
                 </div>
         </mat-form-field>            
         </div>
