depost fixed except final submit

--- a/src/app/components/mainapp/newdeposits/cashbox.html
+++ b/src/app/components/mainapp/newdeposits/cashbox.html
@@ -110,6 +110,7 @@
         </mat-form-field>            
         </div>
         </form>
+        Total Cash Sum should be {{ data.payload}}
 </mat-dialog-content>
  
 <mat-dialog-actions>
