--- a/src/app/components/mainapp/editdeposits/editdeposits.component.html
+++ b/src/app/components/mainapp/editdeposits/editdeposits.component.html
@@ -5,6 +5,177 @@
   <app-menu></app-menu>
    <div class="col-sm-8 text-left"> 
       <h1>Edit Deposits</h1>
+      <mat-accordion>
+          <mat-expansion-panel>
+            <mat-expansion-panel-header>
+              <mat-panel-title>
+                Search
+              </mat-panel-title>
+             
+            </mat-expansion-panel-header>
+            <form (ngSubmit)="onSubmitSearch()" #f="ngForm">
+              <mat-form-field>
+                <input matInput type="date" placeholder="Start Date" [(ngModel)]="startdate" name="startdate" required>
+              </mat-form-field>
+          
+              <mat-form-field>
+                <input matInput type="date" placeholder="End Date" [(ngModel)]="enddate" name="enddate" required>
+              </mat-form-field>
+
+              <mat-form-field>
+                  <mat-select [(ngModel)]="selectedBank" placeholder="Select Bank" name="banklist">
+                    <mat-option *ngFor="let bank of bankdata" [value]="bank.codename" (click)="onClick(bank.fullname,bank.codename)">
+                      {{ bank.fullname }}
+                    </mat-option>
+                  </mat-select>
+              </mat-form-field>
+              <div class="form-group">
+                  <div class="row">
+                    <button class="mat-raised-button mat-primary"   [disabled]="!f.valid"> Search</button>
+                  </div>
+              </div>  
+            </form>
+          </mat-expansion-panel>
+          <mat-expansion-panel (opened)="panelOpenState = true"
+                               (closed)="panelOpenState = false">
+            <mat-expansion-panel-header>
+              <mat-panel-title>
+                List of searched deposits {{selectedBankName}}
+              </mat-panel-title>
+            </mat-expansion-panel-header>
+          
+            <div class="example-container mat-elevation-z8">
+   
+  
+                <mat-table #table [dataSource]="dataSource" class="example-table"
+                           matSort matSortActive="created" matSortDisableClear matSortDirection="asc">
+              
+                  <!--- Note that these columns can be defined in any order.
+                        The actual rendered columns are set as a property on the row definition" -->
+              
+                  <!-- id -->
+                  <ng-container matColumnDef="depositid">
+                      <mat-header-cell *matHeaderCellDef class="example-header">#</mat-header-cell>
+                      <mat-cell *matCellDef="let row">{{ row.depositid }}</mat-cell>
+                    </ng-container>
+                      
+                  <!-- Bank -->
+                  <ng-container matColumnDef="bankac">
+                    <mat-header-cell *matHeaderCellDef class="example-header">Bank A/C</mat-header-cell>
+                    <mat-cell *matCellDef="let row">{{ row.bankac }}</mat-cell>
+                  </ng-container>
+              
+                  <!-- Date Column -->
+                  <ng-container matColumnDef="datecreated">
+                    <mat-header-cell *matHeaderCellDef class="example-header">Date</mat-header-cell>
+                    <mat-cell *matCellDef="let row">{{ row.datecreated   }}</mat-cell>
+                  </ng-container>
+              
+                  <!-- Deposit Column -->
+                  <ng-container matColumnDef="depositamt">
+                    <mat-header-cell *matHeaderCellDef class="example-header"> Amount </mat-header-cell>
+                    <mat-cell *matCellDef="let row">{{ row.depositamt }}</mat-cell>
+                  </ng-container>
+
+                   <!-- Details Column -->
+                   <ng-container matColumnDef="details">
+                      <mat-header-cell *matHeaderCellDef class="example-header"> Details </mat-header-cell>
+                      <mat-cell *matCellDef="let row">{{ row.details }}</mat-cell>
+                    </ng-container>
+
+                    <ng-container matColumnDef="actions">
+                        <mat-header-cell *matHeaderCellDef class="example-header">Details</mat-header-cell>
+                        <mat-cell *matCellDef="let row"> <button md-raised-button (click)="selectRow(row)" >Details </button>    <span style="width: 10px"></span>
+                        </mat-cell>
+                       
+                    </ng-container>
+              
+                  <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+                  <mat-row *matRowDef="let row; columns: displayedColumns;  let i = index;"  
+                  [ngClass]="{'highlight': selectedRowIndex == row.depositid}"
+                  (mouseover)="highlight(row,i)"> </mat-row>
+            
+                  
+                  
+                </mat-table>
+              
+                <mat-paginator [length]="resultsLength" [pageSize]="4">
+                </mat-paginator>
+              </div>
+          </mat-expansion-panel>
+        
+          <mat-expansion-panel (opened)="panelOpenState = true"
+                               (closed)="panelOpenState = false">
+            <mat-expansion-panel-header>
+              <mat-panel-title>
+                Details of selected deposit
+              </mat-panel-title>
+             
+            </mat-expansion-panel-header>
+           
+
+
+            <div class="example-container mat-elevation-z8">
+   
+  
+                <mat-table #table [dataSource]="dataSourceDetail" class="example-table"
+                           matSort matSortActive="created" matSortDisableClear matSortDirection="asc">
+              
+                  <!--- Note that these columns can be defined in any order.
+                        The actual rendered columns are set as a property on the row definition" -->
+              
+                  <!-- id -->
+                  <ng-container matColumnDef="date">
+                      <mat-header-cell *matHeaderCellDef class="example-header">Date</mat-header-cell>
+                      <mat-cell *matCellDef="let row">{{ row.date | date }}</mat-cell>
+                    </ng-container>
+                      
+                  <!-- Bank -->
+                  <ng-container matColumnDef="amount">
+                    <mat-header-cell *matHeaderCellDef class="example-header">Amount</mat-header-cell>
+                    <mat-cell *matCellDef="let row">{{ row.amount }}</mat-cell>
+                  </ng-container>
+              
+                  <!-- Date Column -->
+                  <ng-container matColumnDef="agentname">
+                    <mat-header-cell *matHeaderCellDef class="example-header">Agent</mat-header-cell>
+                    <mat-cell *matCellDef="let row">{{ row.agentname   }}</mat-cell>
+                  </ng-container>
+              
+                  <!-- Deposit Column -->
+                  <ng-container matColumnDef="invoice">
+                    <mat-header-cell *matHeaderCellDef class="example-header"> Invoice </mat-header-cell>
+                    <mat-cell *matCellDef="let row">{{ row.invoice }}</mat-cell>
+                  </ng-container>
+
+                   <!-- Details Column -->
+                   <ng-container matColumnDef="rcvdfrom">
+                      <mat-header-cell *matHeaderCellDef class="example-header"> Rcvd. From </mat-header-cell>
+                      <mat-cell *matCellDef="let row">{{ row.rcvdfrom }}</mat-cell>
+                  </ng-container>
+
+                   <!-- Details Column -->
+                   <ng-container matColumnDef="fortrip">
+                      <mat-header-cell *matHeaderCellDef class="example-header"> For </mat-header-cell>
+                      <mat-cell *matCellDef="let row">{{ row.fortrip }}</mat-cell>
+                  </ng-container>
+
+                    
+                  <mat-header-row *matHeaderRowDef="displayedColumnsDetail"></mat-header-row>
+                  <mat-row *matRowDef="let row; columns: displayedColumnsDetail;  let i = index;"  
+                
+                  (mouseover)="highlight(row,i)"> </mat-row>
+            
+                  
+                  
+                </mat-table>
+              
+                <mat-paginator [length]="resultsLength" [pageSize]="4">
+                </mat-paginator>
+              </div>
+          </mat-expansion-panel>
+        </mat-accordion>
+        
            
           
     </div>
@@ -13,14 +184,6 @@
 
 
 
-    
-    <div class="col-sm-2 sidenav">
-      <div class="well">
-        <p>Recent Activity</p>
-      </div>
-      <div class="well">
-        <p>Today's Summary{{lastReceiptData}}</p>
-      </div>
-    </div>
+  
   </div>
 </div>
