--- a/src/app/components/mainapp/editreceipt/editreceipt.component.html
+++ b/src/app/components/mainapp/editreceipt/editreceipt.component.html
@@ -140,7 +140,7 @@
         
             <ng-container matColumnDef="date">
                 <mat-header-cell *matHeaderCellDef class="example-header">Date</mat-header-cell>
-                <mat-cell *matCellDef="let row">{{ row.date }}</mat-cell>
+                <mat-cell *matCellDef="let row">{{ row.date | date }}</mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="fortrip">
@@ -204,7 +204,7 @@
             
           </mat-table>
         
-          <mat-paginator [length]="resultsLength" [pageSize]="2">
+          <mat-paginator [length]="resultsLength" [pageSize]="5">
           </mat-paginator>
           
         </div>
