update password code and undeposit

--- a/src/app/components/mainapp/changepassword/changepassword.component.html
+++ b/src/app/components/mainapp/changepassword/changepassword.component.html
@@ -3,24 +3,29 @@
   <div class="row content">
     
   <app-menu></app-menu>
-   <div class="col-sm-8 text-left"> 
+   <div class="col-sm-10 text-left"> 
       <h1>Change Password</h1>
-           
+     <mat-card>
+       
+          <div class="column">
+              <label class="caption-label"> Old Password</label>  <input  [(ngModel)]="oldpassword" > 
+          </div>
+          <div class="column">
+              <label class="caption-label" > New Password</label>  <input  [(ngModel)]="newpassword" > 
+          </div>
+          <div class="column">
+              <label class="caption-label"> New Password again</label>  <input  [(ngModel)]="newpassword1" > 
+          </div>
+          <p></p>
+      
+        <button (click)="updatePassword()"> Update Password</button>
+      
+
+     </mat-card>
           
     </div>
           
-          
-
-
-
     
-    <div class="col-sm-2 sidenav">
-      <div class="well">
-        <p>Recent Activity</p>
-      </div>
-      <div class="well">
-        <p>Today's Summary{{lastReceiptData}}</p>
-      </div>
-    </div>
+    
   </div>
 </div>
