--- a/src/app/components/mainapp/editreceipt/editreceipt.component.html
+++ b/src/app/components/mainapp/editreceipt/editreceipt.component.html
@@ -8,7 +8,7 @@
         <mat-expansion-panel id="panel1" #panel1 >
           <mat-expansion-panel-header>
             <mat-panel-title>
-              Search
+                <span class="glyphicon glyphicon-search"></span> Search
             </mat-panel-title>
             
           </mat-expansion-panel-header>
