fixed bugs with receipt edit

--- a/src/app/components/mainapp/editreceipt/edit-receipts.html
+++ b/src/app/components/mainapp/editreceipt/edit-receipts.html
@@ -22,7 +22,7 @@
     </div>
 
     <div class="column">
-      <mat-checkbox [checked]="usdIsChecked" formControlName="usd">USD</mat-checkbox>
+      <mat-checkbox [(ngModel)]="usdIsChecked" formControlName="usd">USD</mat-checkbox>
     </div>
   </div>
   
