--- a/src/app/components/mainapp/editreceipt/editreceipt.component.html
+++ b/src/app/components/mainapp/editreceipt/editreceipt.component.html
@@ -142,6 +142,10 @@
                 <mat-header-cell *matHeaderCellDef class="example-header">Date</mat-header-cell>
                 <mat-cell *matCellDef="let row">{{ row.date | date }}</mat-cell>
             </ng-container>
+            <ng-container matColumnDef="rstatus">
+                <mat-header-cell *matHeaderCellDef class="example-header">Status</mat-header-cell>
+                <mat-cell *matCellDef="let row">{{ row.rstatus }}</mat-cell>
+            </ng-container>
 
             <ng-container matColumnDef="fortrip">
                 <mat-header-cell *matHeaderCellDef class="example-header">for</mat-header-cell>
